--- a/ui/website/src/allBlocks/Blogs/Blogs.css
+++ b/ui/website/src/allBlocks/Blogs/Blogs.css
@@ -144,6 +144,12 @@
   .padding_Mob{
     padding-left: 11px ! important;
   }
+  .blogbtn1{
+      padding: 7px 0px;
+      width: 80px;
+      float: right;
+
+    }
 }
 @media only screen 
   and (min-width: 1024px) 
