--- a/ui/website/src/allBlocks/Commonstream/Commonstream.css
+++ b/ui/website/src/allBlocks/Commonstream/Commonstream.css
@@ -68,6 +68,7 @@
   }
   .contentheader h2{
     font-size: 28px ! important;
+    padding:15px ! important; 
   }
   .para10{
     width: 235px ! important;
