--- a/ui/website/src/App.css
+++ b/ui/website/src/App.css
@@ -1459,7 +1459,24 @@ div, a, p, h1, h2, h3, h4, h5, h6, i, span, label{
  .serflip-cardservices img{
   width: 285px ! important;
  } 
+} 
+
+@media only screen and (device-width : 320px) and (device-height : 533px){ 
+  .newcard_landscape {
+      width: 215px ! important;
+  }
 }  
+@media only screen and (device-width : 320px) and (device-height : 480px){ 
+  .newcard_landscape {
+      width: 210px ! important;
+  }
+}    
+
+@media only screen and (device-width : 240px) and (device-height : 320px){ 
+  .newcard_landscape {
+      width: 155px ! important;
+  }
+}    
 
 
 
