--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -975,6 +975,32 @@ border:1px solid #eee ! important;
       height: 100px;
     }  
    }
+     @media only screen and (device-width : 360px) { 
+    .headerlogo img{
+      margin-left: -70px ! important;
+    }
+    .resbanner {
+        height: 700px ! important;
+      }
+     .ct-topbar{
+      left: 303px ! important;
+       margin-top: 8px;
+    }
+     .headerflowscroll{
+      height: 100px;
+    } 
+    .topnav.responsive{
+      left:-24px ! important;
+    } 
+    .topnav a.icon{
+      color: #333;
+    }
+    .topnav a.icon {
+      top: -10px;
+      right: -26px;
+
+     }
+    } 
     @media only screen and (device-width : 400px) and (device-height : 600px) { 
     .headerlogo img{
       margin-left: -70px ! important;
