--- a/ui/website/src/common/Header/Header.css
+++ b/ui/website/src/common/Header/Header.css
@@ -637,11 +637,12 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
+    color :#585755 ! important;
     top:-15px ! important;
      right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -67px;
     /*margin-top: 12px;*/
@@ -656,11 +657,12 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
+    color :#585755 ! important;
     top:-15px ! important;
      right: -16px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -50px;
     margin-top: 12px;
@@ -675,11 +677,12 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
+    color :#585755 ! important;
     /*top:-15px ! important;*/
     /*right: -16px ! important;*/
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -70px;
     margin-top: -12px;
@@ -695,11 +698,12 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
+    color :#585755 ! important;
     /*top:-15px ! important;*/
     /*right: -16px ! important;*/
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -70px;
     margin-top: -15px;
@@ -719,6 +723,7 @@ border:1px solid #eee ! important;
     .topnav a.icon {
       top: -13px;
       right: -28px;
+      color :#585755 ! important;
      }
     .topnav.responsive{
       top: -53px;
@@ -737,7 +742,7 @@ border:1px solid #eee ! important;
   .topnav a.icon {
     top   : -11px;
     right : -20px;
-    color :#585755 ! important
+    color :#585755 ! important;
   }
    .headerlogo img {
     height: 60px ! important;
@@ -787,7 +792,7 @@ border:1px solid #eee ! important;
    .topnav a.icon{
     top:-15px ! important;
     right: -16px ! important;
-     color :#585755 ! important
+    color :#585755 ! important;
    }
    .headerlogo img {
     height: 60px ! important;
@@ -799,6 +804,15 @@ border:1px solid #eee ! important;
       left: 344px ! important;
       top:20px;
     }
+    .topnav.responsive .icon{
+      color: #f19000 ! important;
+    }
+    .topnav.responsive {
+        background-color: #333333f5;
+        top: -43px;
+        width: 430px;
+        left: -26px;
+    }
 
   }  
 
@@ -809,7 +823,7 @@ border:1px solid #eee ! important;
    .topnav a.icon{
     top:-11px ! important;
     right: -16px ! important;
-     color :#585755 ! important
+     color :#585755 ! important;
    }
    .headerlogo img {
     height: 60px ! important;
@@ -830,7 +844,7 @@ border:1px solid #eee ! important;
    .topnav a.icon{
     top:-11px ! important;
     right: -16px ! important;
-     color :#585755 ! important
+     color :#585755 ! important;
    }
    .headerlogo img {
     height: 60px ! important;
@@ -886,7 +900,7 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
-     color :#585755 ! important
+     color :#585755 ! important;
     /*top:-15px ! important;*/
     /*right: -16px ! important;*/
    }
@@ -928,7 +942,7 @@ border:1px solid #eee ! important;
     .topnav a.icon {
         top: -10px;
         right: -32px;
-         color :#585755 ! important
+         color :#585755 ! important;
       }
       .topnav.responsive {
         position: absolute;
@@ -1005,6 +1019,11 @@ border:1px solid #eee ! important;
     .headerlogo img{
       margin-left: -70px ! important;
     }
+     .topnav a.icon {
+        top: -10px;
+        right: -32px;
+         color :#585755 ! important;
+      }
     .resbanner {
         height: 720px ! important;
       }
@@ -1020,6 +1039,11 @@ border:1px solid #eee ! important;
     .headerlogo img{
       margin-left: -70px ! important;
     }
+    .topnav a.icon {
+        top: -10px;
+        right: -32px ! important;
+         color :#585755 ! important;
+      }
     .resbanner {
         height: 720px ! important;
       }
@@ -1110,6 +1134,7 @@ border:1px solid #eee ! important;
       .topnav a.icon {
         top: -9px;
         right: -23px;
+        color :#585755 ! important;
       }
       .topnav.responsive{
         left:-59px ! important;
@@ -1133,6 +1158,7 @@ border:1px solid #eee ! important;
     /*font-size: 0px ! important;*/
    }
    .topnav a.icon{
+    color :#585755 ! important;
     /*top:-15px ! important;*/
     /*right: -16px ! important;*/
    }
@@ -1151,6 +1177,62 @@ border:1px solid #eee ! important;
     }
 
   }  
+  @media only screen and (device-width : 412px) and (device-height : 640px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top: -15px ! important;
+    right: -16px ! important;
+    color :#585755 ! important;
+   }
+   .headerlogo img {
+    height: 68px ! important;
+    /*z-index: 1000;*/
+    margin-left: -70px;
+    margin-top: -10px;
+    }
+    .ct-topbar{
+      left: 345px ! important;
+       margin-top: 8px;
+    }
+     .headerflowscroll{
+      height: 100px;
+    }
+
+  }  
+   @media only screen and (device-width : 320px) and (device-height : 640px) { 
+   .topnav a{
+    /*font-size: 0px ! important;*/
+   }
+   .topnav a.icon{
+    top: -17px ! important;
+    right: -32px ! important;
+    color :#585755 ! important;
+   }
+   .headerlogo img {
+    height: 60px ! important;
+    /*z-index: 1000;*/
+    margin-left: -70px;
+    margin-top: -10px;
+    }
+    .ct-topbar{
+      left: 271px ! important;
+       margin-top: 8px;
+    }
+     .headerflowscroll{
+      height: 100px;
+    }
+    .topnav.responsive{
+      left:-64px ! important;
+    }
+    .topnav.responsive .icon{
+          left: 320px;
+          top: -9px ! important;
+          color: #f19000 ! important;
+      }
+
+  }  
 
 @media only screen and (device-width : 393px) and (device-height : 851px) { 
    .topnav a{
@@ -1161,7 +1243,7 @@ border:1px solid #eee ! important;
     right: -5px ! important;
    }
    .headerlogo img {
-    height: 68px ! important;
+    height: 60px ! important;
     /*z-index: 1000;*/
     margin-left: -60px;
     margin-top: -10px;
@@ -1218,6 +1300,18 @@ border:1px solid #eee ! important;
     }
     
 }
+ @media only screen 
+  and (device-width: 1536px) 
+  and (device-height: 2048px) 
+  and (orientation: portrait){
+     .topnav a{
+      padding: 14px 14px;
+     }
+     .dropdown .dropbtn{
+      padding: 14px 14px;
+
+     }
+  }   
  
 
 
