--- a/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
+++ b/ui/website/src/allBlocks/AllBlogsList/AllBlogsList.css
@@ -273,3 +273,10 @@ left: 35% ! important;
 		left:5em ! important;
 	}
   }	
+
+  @media only screen and (device-width : 411px) and (device-height : 823px) { 
+    .All1blog1 {
+		    width: 300px ! important;
+		}
+   
+ } 
