--- a/ui/website/src/allBlocks/Banner/Banner.css
+++ b/ui/website/src/allBlocks/Banner/Banner.css
@@ -990,7 +990,64 @@ height: 90px;
 
       }
   }
+   @media only screen and (device-width : 412px) {
+     .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 730px ! important;
+
+      }
+
+   }
    @media only screen and (device-width : 412px) and (device-height : 732px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 730px ! important;
+
+      }
+  }
+  @media only screen and (device-width : 412px) and (device-height : 640px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 730px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 320px) and (device-height : 640px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 640px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 320px) and (device-height : 600px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 640px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 320px) and (device-height : 700px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 640px ! important;
+
+      }
+  }
+  @media only screen and (device-width : 320px) and (device-height : 712px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 640px ! important;
+
+      }
+  }
+  @media only screen and (device-width : 320px) and (device-height : 823px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 640px ! important;
+
+      }
+  }
+   @media only screen and (device-width : 412px) and (device-height : 500px) { 
     .resbanner{
         /*background-repeat: no-repeat;*/
         height: 730px ! important;
@@ -1011,6 +1068,20 @@ height: 90px;
 
       }
   }
+   @media only screen and (device-width : 480px) and (device-height : 712px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 820px ! important;
+
+      }
+  }
+  @media only screen and (device-width : 480px) { 
+    .resbanner{
+        /*background-repeat: no-repeat;*/
+        height: 820px ! important;
+
+      }
+  }
    @media only screen and (device-width : 375px) { 
     .resbanner{
         /*background-repeat: no-repeat;*/
@@ -1019,7 +1090,7 @@ height: 90px;
       }
   }
  @media only screen 
-    and (min-device-width : 411px) 
+    and (device-width : 411px) 
     and (device-height : 731px){
       .resbanner{
         /*margin-top: 130px ! important;*/
@@ -1028,7 +1099,7 @@ height: 90px;
       }
  }
   @media only screen 
-    and (min-device-width : 411px) 
+    and (device-width : 411px) 
     and (device-height : 823px){
       .resbanner{
         /*margin-top: 120px ! important;*/
