--- a/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
+++ b/ui/website/src/allBlocks/Commonservicesblock/Commonservicesblock.css
@@ -486,6 +486,12 @@
     margin-left: 20px ! important;
   } 
 }
+@media only screen and (device-width : 411px) and (device-height : 823px) {
+
+   .serflip-cardservices img{
+    margin-left: 22px ! important;
+  } 
+}
 @media only screen and (device-width : 375px) and (device-height : 812px) { 
     .newcard_landscape {
       width: 248px ! important;
