--- a/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
+++ b/ui/website/src/blockTemplate/CircleMenuBars/CircleMenuBars.css
@@ -788,6 +788,17 @@
     }
    
  }
+  @media only screen and (device-width : 411px) and (device-height : 823px) { 
+    .new_round-tabfor5 {
+        margin-left: 37% ! important;
+    }
+    .new_wizardNotefor5{
+      right: 2px ! important;
+    }
+    .new_round-tabfor6{
+   }
+   
+ }
  @media only screen and (device-width : 400px) and (device-height : 700px){ 
   .new_round-tabfor5 {
         margin-left: 30% ! important;
@@ -882,5 +893,23 @@
       right: 6px ! important;
   }
 }  
+@media only screen 
+  and (device-width: 2048px) 
+  and (device-height: 1536px) 
+  and (orientation: landscape){
+    
+    .new_wizardNote_for6{
+      right: 79px ! important;
+    }
+
+  } 
+  @media only screen 
+  and (device-width: 1536px) 
+  and (device-height: 2048px) 
+  and (orientation: portrait){
+     .new_wizardNote_for6{
+      right: 53px ! important;
+     }
+  }    
 
 
