--- a/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
+++ b/ui/website/src/blockTemplate/ExpertiseServicesOffered/ExpertiseServicesOffered.css
@@ -273,4 +273,20 @@
      }
 
   } 
-   
+  @media only screen 
+  and (device-width: 1536px) 
+  and (device-height: 2048px) 
+  and (orientation: portrait){
+    .B4T_ServicesDiv{
+      margin-left: 85px ! important;
+    }
+  }
+   @media only screen 
+  and (device-width: 2048px) 
+  and (device-height: 1536px) 
+  and (orientation: landscape){
+    .B4T_ServicesDiv{
+      margin-left: 100px ! important;
+    }
+  } 
+ 
