--- a/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
+++ b/ui/website/src/blockTemplate/ImgBlock/ImgBlock.css
@@ -12,10 +12,10 @@
 	    height: auto ! important;
 	    padding: 0px ! important;
 	}
-	.services_img img{
-		height: 375px ! important;
-        /*object-fit: contain;*/
-	 }
+	.img1 img{
+		height: 300px ! important;
+
+	}
 
 }
 @media only screen and (device-width : 401px)and (device-height : 600px){
