--- a/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
+++ b/ui/website/src/blockTemplate/Typecomponent2_btn/Typecomponent2_btn.css
@@ -63,3 +63,16 @@
     }*/
 }
 
+@media screen and (max-width: 600px) {
+     .Textrighgtblock{
+      height: 530px ! important;
+
+    }
+    .marginTopMobile{
+        margin-bottom: 35px ! important;
+    }
+    .type1btnDiv{
+        height: 500px ! important;
+    }
+
+}
